<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Management"><menu>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_rooms"
                android:icon="@drawable/baseline_meeting_room_24"
                android:title="@string/menu_rooms" />
            <item
                android:id="@+id/nav_food_menu"
                android:icon="@drawable/outline_food_bank_24"
                android:title="@string/menu_food_menu" />
            <item
                android:id="@+id/nav_staff"
                android:icon="@drawable/baseline_group_24"
                android:title="@string/menu_staff" />
            <item
                android:id="@+id/nav_transactions"
                android:icon="@drawable/transaction_logo"
                android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_business_stat"
            android:icon="@drawable/baseline_business_center_24"
            android:title="@string/menu_business_stat" />
    </group>
    </menu></item>
    <item android:title="Settings">
        <menu>
            <item
                android:checkableBehavior="single"
                android:id="@+id/nav_setting"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/action_settings"/>
    </menu>
    </item>
        <item android:title="Help and Support"><menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/baseline_link_24"
                android:title="@string/menu_contact_us" />
            <item
                android:id="@+id/rateApp"
                android:icon="@drawable/baseline_tag_faces_24"
                android:onClick="rateApp"
                android:title="@string/menu_rate_this_app" />
            <item
                android:id="@+id/shareApp"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/menu_share_this_app"
                android:onClick="shareApp"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_help_outline_24"
                android:title="@string/menu_about" />
            </group>
        </menu></item>
    <item android:title="Logout">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:onClick="logout"
                    android:title="@string/menu_logout" />
                    <item
                        android:id="@+id/sampleNull"
                        android:title="@null"/>
                </group>
            </menu>
        </item>
</menu>