<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.guestincsync.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.guestincsync.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_business_stat"
        android:name="com.example.guestincsync.ui.business_stats.BusinessStat"
        android:label="@string/menu_business_stat"
        tools:layout="@layout/fragment_business_stat" />
    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.guestincsync.ui.my_transactions.My_TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_my__transaction" />
    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.example.guestincsync.ui.my_rooms.My_RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_my__rooms" />
    <fragment
        android:id="@+id/nav_food_menu"
        android:name="com.example.guestincsync.ui.my_menu_items.My_Menu_ItemsFragment"
        android:label="@string/menu_food_menu"
        tools:layout="@layout/fragment_my__menu__items" />
    <fragment
        android:id="@+id/nav_staff"
        android:name="com.example.guestincsync.ui.my_staff.My_StaffFragment"
        android:label="@string/menu_staff"
        tools:layout="@layout/fragment_my__staff" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.guestincsync.ui.contact_us.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.guestincsync.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.guestincsync.ui.settings.SettingFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_setting" />
</navigation>